Fix spacing

--- a/qfield/css/theme/opengis.css
+++ b/qfield/css/theme/opengis.css
@@ -16,7 +16,7 @@ body {
   //background: #191919;
   //background-color: #191919;
   font-family: "futura-pt", 'Helvetica';
-  letter-spacing:-5px;
+  //letter-spacing:-5px;
   font-weight:bold;
 }
 
